--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ブレインロット相談窓口（非公式）</title>
+  <style>
+    body {
+      font-family: "Noto Sans JP", sans-serif;
+      background-color: #0d1117;
+      color: #e6edf3;
+      text-align: center;
+      padding: 40px;
+    }
 
+    h1 {
+      font-size: 2.2em;
+      color: #58a6ff;
+    }
+
+    p {
+      font-size: 1.1em;
+    }
+
+    .notice {
+      background: #161b22;
+      border-left: 5px solid #f85149;
+      padding: 20px;
+      margin: 20px auto;
+      width: 90%;
+      max-width: 700px;
+      text-align: left;
+      border-radius: 10px;
+      line-height: 1.8;
+    }
+
+    .link-box {
+      background: #1f6feb;
+      color: white;
+      padding: 15px 25px;
+      border-radius: 8px;
+      display: inline-block;
+      margin-top: 25px;
+      text-decoration: none;
+      font-size: 1.2em;
+      transition: background 0.3s;
+    }
+
+    .link-box:hover {
+      background: #388bfd;
+    }
+
+    footer {
+      margin-top: 60px;
+      font-size: 0.9em;
+      color: #8b949e;
+    }
+  </style>
+</head>
+<body>
+  <h1>🧠 ブレインロット相談窓口（非公式）</h1>
+  <p>ブレインロットに関する詐欺・トラブル・悩みの相談を受け付けています。</p>
+
+  <div class="notice">
+    <strong>⚠️ 注意事項</strong><br><br>
+    ・このサイトは非公式の相談窓口です。<br>
+    ・誹謗中傷や個人攻撃は禁止です。<br>
+    ・DMでは、状況を丁寧にお伝えください。必要に応じて対応策をご案内します。<br>
+    ・法的対応が必要な場合は、警察や専門機関への相談をおすすめします。<br>
+  </div>
+
+  <a href="https://x.com/toye163451" class="link-box" target="_blank">
+    📩 X（旧Twitter）DMで相談する
+  </a>
+
+  <footer>
+    <p>※本サイトは個人による情報提供・相談サポートを目的としています。<br>
+    提供情報の正確性を保証するものではなく、主は責任を負いません。</p>
+  </footer>
+</body>
+</html>
