--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ブレインロット相談窓口（非公式）</title>
+  <title>ブレインロット相談窓口（自動音声案内付き）</title>
   <style>
     body {
       font-family: "Noto Sans JP", sans-serif;
@@ -50,6 +50,24 @@
       background: #388bfd;
     }
 
+    .controls {
+      margin-top: 30px;
+    }
+
+    button {
+      background: #238636;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1em;
+    }
+
+    button:hover {
+      background: #2ea043;
+    }
+
     footer {
       margin-top: 60px;
       font-size: 0.9em;
@@ -73,9 +91,37 @@
     📩 X（旧Twitter）DMで相談する
   </a>
 
+  <div class="controls">
+    <button id="speakBtn">🔊 アナウンス再生</button>
+    <button id="stopBtn">⏹ 停止</button>
+  </div>
+
   <footer>
     <p>※本サイトは個人による情報提供・相談サポートを目的としています。<br>
     提供情報の正確性を保証するものではなく、主は責任を負いません。</p>
   </footer>
+
+  <script>
+    const message = new SpeechSynthesisUtterance();
+    message.lang = "ja-JP";
+    message.text = "ご利用ありがとうございます。こちらはブレインロットに関する非公式相談窓口です。詐欺やトラブル、悩みなどがありましたら、X旧ツイッターのダイレクトメッセージまでご相談ください。誹謗中傷は禁止です。";
+    message.rate = 1.0;
+
+    // ページ読み込み時に自動再生（ブラウザによっては1クリック必要）
+    window.addEventListener("load", () => {
+      setTimeout(() => {
+        speechSynthesis.speak(message);
+      }, 1000);
+    });
+
+    document.getElementById("speakBtn").addEventListener("click", () => {
+      speechSynthesis.cancel();
+      speechSynthesis.speak(message);
+    });
+
+    document.getElementById("stopBtn").addEventListener("click", () => {
+      speechSynthesis.cancel();
+    });
+  </script>
 </body>
 </html>
